Minor presentation fixes  (#27)
Add homepage link to login page and change css for flash bar when user-bar present so they don't overlap

--- a/public/css/linkgarden.css
+++ b/public/css/linkgarden.css
@@ -33,6 +33,10 @@ h1 {
     margin-top: 55px;
 }
 
+#user-bar + .flash-msg-container {
+    margin-top: 55px;
+}
+
 .box {
     margin: 0 auto;
     margin-top: 25px;
